idea/testData/multiplatform/incompleteActualization/jvmAndJs/jvmAndJs.kt
package foo

expect class <!LINE_MARKER("descr='Has actuals in JS'"), NO_ACTUAL_FOR_EXPECT!>ExpectInMiddleActualInJsOnly<!>
expect class <!LINE_MARKER("descr='Has actuals in JVM'"), NO_ACTUAL_FOR_EXPECT!>ExpectInMiddleActualInJvmOnly<!>